[package]
name = "izanami-cli"
version = "1.9.0-SNAPSHOT"
authors = ["adelegue <https://github.com/larousso>"]

[dependencies]
clap = "2.26"
regex = "0.2"
hyper = "0.11"
futures = "0.1"
tokio-core = "0.1"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
frunk = "0.1.34"
json-color = "0.6.1"
home = "0.5.3"