[package]
name = "izanami-cli"
version = "1.11.3"
authors = ["adelegue <https://github.com/larousso>"]
edition = "2021"

[dependencies]
clap = "2.26"
regex = "0.2"
hyper = "0.11"
futures = "0.3.13       "
tokio-core = "0.1"
reqwest = { version = "0.11.2", features = ["blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
frunk = "0.1.34"
json-color = "0.6.1"
home = "0.5.3"
